// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Masonry card type tests Masonry card accent component should render 1`] = `
<div
  className="card_masonry "
  id=""
>
  <div
    className="card-img bgAccent"
  />
  <div
    className="card_masonry-content"
  >
    <div
      className="card-top "
      id=""
    >
      <div
        className="status-tag_success"
      >
        semantic
      </div>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          more_vert
        </span>
      </button>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          favorite_border
        </span>
      </button>
    </div>
    <div
      className="card-header "
      id=""
    >
      <h4>
        This is a title
      </h4>
    </div>
    <div
      className="card-body "
      id=""
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ea voluptates, facilis dolore dignissimos eum accusamus vitae accusantium dolores veritatis maiores deserunt unde natus similique omnis sit quaerat! At, asperiores.
    </div>
  </div>
</div>
`;

exports[`Masonry card type tests Masonry card accent without image component should render 1`] = `
<div
  className="card_masonry "
  id=""
>
  <div
    className="card-img bgAccent"
  />
  <div
    className="card_masonry-content"
  >
    <div
      className="card-top "
      id=""
    >
      <div
        className="status-tag_success"
      >
        semantic
      </div>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          more_vert
        </span>
      </button>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          favorite_border
        </span>
      </button>
    </div>
    <div
      className="card-header "
      id=""
    >
      <h4>
        This is a title
      </h4>
    </div>
    <div
      className="card-body "
      id=""
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ea voluptates, facilis dolore dignissimos eum accusamus vitae accusantium dolores veritatis maiores deserunt unde natus similique omnis sit quaerat! At, asperiores.
    </div>
  </div>
</div>
`;

exports[`Masonry card type tests Masonry card component should render 1`] = `
<div
  className="card_masonry.stepone-ui"
  id=""
>
  <div
    className="card-img "
    id=""
  >
    <img
      alt="img-background"
      src="https://i.pinimg.com/736x/ee/be/fb/eebefb37815a1346e8cb4f3db608e1b1.jpg"
    />
  </div>
  <div
    className="card_masonry-content"
  >
    <div
      className="card-top "
      id=""
    >
      <div
        className="status-tag_success"
      >
        semantic
      </div>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          more_vert
        </span>
      </button>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          favorite_border
        </span>
      </button>
    </div>
    <div
      className="card-header "
      id=""
    >
      <h4>
        This is a title
      </h4>
    </div>
    <div
      className="card-body "
      id=""
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ea voluptates, facilis dolore dignissimos eum accusamus vitae accusantium dolores veritatis maiores deserunt unde natus similique omnis sit quaerat! At, asperiores.
    </div>
  </div>
</div>
`;

exports[`Masonry card type tests Masonry card horizontal component should render 1`] = `
<div
  className="card_masonry_horizontal.stepone-ui"
  id=""
>
  <div
    className="card-img "
    id=""
  >
    <img
      alt="img-background"
      src="https://i.pinimg.com/736x/ee/be/fb/eebefb37815a1346e8cb4f3db608e1b1.jpg"
    />
  </div>
  <div
    className="card_masonry-content"
  >
    <div
      className="card-top "
      id=""
    >
      <div
        className="status-tag_success"
      >
        semantic
      </div>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          more_vert
        </span>
      </button>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          favorite_border
        </span>
      </button>
    </div>
    <div
      className="card-header "
      id=""
    >
      <h4>
        This is a title
      </h4>
    </div>
    <div
      className="card-body "
      id=""
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ea voluptates, facilis dolore dignissimos eum accusamus vitae accusantium dolores veritatis maiores deserunt unde natus similique omnis sit quaerat! At, asperiores.
    </div>
  </div>
</div>
`;

exports[`Masonry card type tests Masonry card selected component should render 1`] = `
<div
  className="card_masonry_selected.stepone-ui"
  id=""
>
  <div
    className="card-img "
    id=""
  >
    <img
      alt="img-background"
      src="https://i.pinimg.com/736x/ee/be/fb/eebefb37815a1346e8cb4f3db608e1b1.jpg"
    />
  </div>
  <div
    className="card_masonry-content"
  >
    <div
      className="card-top "
      id=""
    >
      <div
        className="status-tag_success"
      >
        semantic
      </div>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          more_vert
        </span>
      </button>
      <button
        className="button-card-icon"
      >
        <span
          className="material-icons"
        >
          favorite_border
        </span>
      </button>
    </div>
    <div
      className="card-header "
      id=""
    >
      <h4>
        This is a title
      </h4>
    </div>
    <div
      className="card-body "
      id=""
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ea voluptates, facilis dolore dignissimos eum accusamus vitae accusantium dolores veritatis maiores deserunt unde natus similique omnis sit quaerat! At, asperiores.
    </div>
  </div>
</div>
`;
